fix: Fix inputs stretching past container

--- a/src/assets/scss/_layout-structure.scss
+++ b/src/assets/scss/_layout-structure.scss
@@ -1,32 +1,36 @@
-@use 'variables' as v;
+	@use 'variables' as v;
 
-// These are the core styles to have the shape and structure of plagiarism checker
-// Let's leave them here, separated from their individual components so we can separate
-// the structure from the style
+	// These are the core styles to have the shape and structure of plagiarism checker
+	// Let's leave them here, separated from their individual components so we can separate
+	// the structure from the style
 
-// The rest of the scss, more or less, will be component based BEM methodology
-.plagiarism-checker {
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  max-width: v.$plagiarism-checker-form-width;
-  z-index: 9999;
-  padding: 20px;
+	// The rest of the scss, more or less, will be component based BEM methodology
+	.plagiarism-checker {
+		position: fixed;
+		bottom: 0;
+		right: 0;
+		width: 100%;
+		height: 100%;
+		max-width: v.$plagiarism-checker-form-width;
+		z-index: 9999;
+		padding: 20px;
 
-  &__form {
-    display: flex;
-    flex-direction: column;
-  }
+		// border-box or no border-box... =)
+	  	// box-sizing: border-box;
 
-  &__input,
-  &__submit-button {
-    margin-bottom: 10px;
-    width: 100%;
-  }
+	&__form {
+		display: flex;
+		flex-direction: column;
+	}
 
-  &__toggle {
-    display: block; // Ensure the toggle remains visible when the form is closed
-  }
+	&__input,
+	&__submit-button {
+		margin-bottom: 10px;
+		width: 100%;
+		box-sizing: border-box; // prevent input from stretching past container width
+	}
+
+	&__toggle {
+		display: block; // Ensure the toggle remains visible when the form is closed
+	}
 }
